--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -38,6 +38,7 @@
   when: agent_installed.rc != 0 or agent_dir is changed
 
 - name: Install VSTS Agent
+  become: yes
   gather_facts: false
   shell: "{{ agent_dir }}\\config.cmd --unattended -url {{ vsts_url }} --auth {{ vsts_auth }} --token {{ vsts_token }} --pool {{ vsts_pool }} --agent {{ ansible_hostname }}-agent --runAsService --work {{ agent_dir }}"
   environment:
